[gd_scene load_steps=83 format=2]

[ext_resource path="res://Scripts/Pj.gd" type="Script" id=1]
[ext_resource path="res://Sprites/PJ1/Idle/Idle_1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/PJ1/Idle/Idle_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/PJ1/Idle/Idle_3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/PJ1/Idle/Idle_4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/PJ1/Idle/Idle_5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/PJ1/Idle/Idle_6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/PJ1/Idle/Idle_7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/PJ1/Idle/Idle_8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/PJ1/Idle/Idle_9.png" type="Texture" id=10]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_4.png" type="Texture" id=14]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_5.png" type="Texture" id=15]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_6.png" type="Texture" id=16]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_7.png" type="Texture" id=17]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_8.png" type="Texture" id=18]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_9.png" type="Texture" id=19]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_10.png" type="Texture" id=20]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_11.png" type="Texture" id=21]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_12.png" type="Texture" id=22]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_13.png" type="Texture" id=23]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_14.png" type="Texture" id=24]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_15.png" type="Texture" id=25]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_16.png" type="Texture" id=26]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_17.png" type="Texture" id=27]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_18.png" type="Texture" id=28]
[ext_resource path="res://Sprites/PJ1/Muerte/Death_19.png" type="Texture" id=29]
[ext_resource path="res://Sprites/PJ1/Run/Run_1.png" type="Texture" id=30]
[ext_resource path="res://Sprites/PJ1/Run/Run_2.png" type="Texture" id=31]
[ext_resource path="res://Sprites/PJ1/Run/Run_3.png" type="Texture" id=32]
[ext_resource path="res://Sprites/PJ1/Run/Run_4.png" type="Texture" id=33]
[ext_resource path="res://Sprites/PJ1/Run/Run_5.png" type="Texture" id=34]
[ext_resource path="res://Sprites/PJ1/Run/Run_6.png" type="Texture" id=35]
[ext_resource path="res://Sprites/PJ1/Run/Run_7.png" type="Texture" id=36]
[ext_resource path="res://Sprites/PJ1/Run/Run_9.png" type="Texture" id=37]
[ext_resource path="res://Sprites/PJ1/Run/Run_8.png" type="Texture" id=38]
[ext_resource path="res://Sprites/PJ1/Run/Run_10.png" type="Texture" id=39]
[ext_resource path="res://Sprites/PJ1/Run/Run_11.png" type="Texture" id=40]
[ext_resource path="res://Sprites/PJ1/Run/Run_12.png" type="Texture" id=41]
[ext_resource path="res://Sprites/PJ1/Wall_Jump/Wall_Jump.png" type="Texture" id=42]
[ext_resource path="res://Sprites/PJ1/Caida_Golpe/Fall_Attack_1.png" type="Texture" id=43]
[ext_resource path="res://Sprites/PJ1/Caida_Golpe/Fall_Attack_2.png" type="Texture" id=44]
[ext_resource path="res://Sprites/PJ1/Caida_Golpe/Fall_Attack_3.png" type="Texture" id=45]
[ext_resource path="res://Sprites/PJ1/Caida_Golpe/Fall_Attack_4.png" type="Texture" id=46]
[ext_resource path="res://Sprites/PJ1/Deslizarse/New PJ Slide.png" type="Texture" id=47]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_1.png" type="Texture" id=48]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_2.png" type="Texture" id=49]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_3.png" type="Texture" id=50]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_4.png" type="Texture" id=51]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_5.png" type="Texture" id=52]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_6.png" type="Texture" id=53]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_7.png" type="Texture" id=54]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_8.png" type="Texture" id=55]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_9.png" type="Texture" id=56]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_10.png" type="Texture" id=57]
[ext_resource path="res://Sprites/PJ1/Ataque/Slash_Attack_11.png" type="Texture" id=58]
[ext_resource path="res://Sprites/PJ1/Salto/Jump_1.png" type="Texture" id=59]
[ext_resource path="res://Sprites/PJ1/Salto/Jump_2.png" type="Texture" id=60]
[ext_resource path="res://Sprites/PJ1/Salto/Jump_3.png" type="Texture" id=61]
[ext_resource path="res://Sprites/PJ1/Salto/Jump_4.png" type="Texture" id=62]
[ext_resource path="res://Sprites/PJ1/Salto/Fall_1.png" type="Texture" id=63]
[ext_resource path="res://Sprites/PJ1/Salto/Fall_2.png" type="Texture" id=64]
[ext_resource path="res://Sprites/PJ1/Salto/Fall_3.png" type="Texture" id=65]
[ext_resource path="res://Sprites/PJ1/Salto/Fall_4.png" type="Texture" id=66]
[ext_resource path="res://Sprites/PJ1/Special/l0_Special1.png" type="Texture" id=67]
[ext_resource path="res://Sprites/PJ1/Special/l0_Special2.png" type="Texture" id=68]
[ext_resource path="res://Sprites/PJ1/Special/l0_Special3.png" type="Texture" id=69]
[ext_resource path="res://Sprites/PJ1/Special/l0_Special4.png" type="Texture" id=70]
[ext_resource path="res://Sprites/PJ1/Special/l0_Special5.png" type="Texture" id=71]
[ext_resource path="res://Sprites/PJ1/Special/l0_Special6.png" type="Texture" id=72]
[ext_resource path="res://Sprites/PJ1/Special/l0_Special7.png" type="Texture" id=73]
[ext_resource path="res://Sprites/PJ1/Special/l0_Special8.png" type="Texture" id=74]
[ext_resource path="res://Sounds/Pj_Sounds/Bounce.wav" type="AudioStream" id=75]
[ext_resource path="res://Sounds/Pj_Sounds/Jump.wav" type="AudioStream" id=76]
[ext_resource path="res://Sounds/Pj_Sounds/Special_Attack.wav" type="AudioStream" id=77]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.00755, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 29 ), ExtResource( 29 ), ExtResource( 29 ), ExtResource( 29 ) ],
"loop": false,
"name": "death",
"speed": 20.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": true,
"name": "wall_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "fall_attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ) ],
"loop": true,
"name": "attack",
"speed": 25.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ) ],
"loop": true,
"name": "p1_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 74 ) ],
"loop": false,
"name": "special_attack",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.7238, 46.0205 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20.1681, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.1694, 16.4865 )

[node name="Pj" type="KinematicBody2D"]
position = Vector2( 52.063, 299.64 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.12, 0.678054 )
scale = Vector2( 2.22342, 4.4521 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.18, 0.18 )
frames = SubResource( 2 )
animation = "idle"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 4.19471e-006, 6 )
rotation = -1.5708
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 15 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 8.86769e-006, -18 )
rotation = -1.5708
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 15 )
collision_mask = 2

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.75, 0.75 )
limit_left = 0
limit_top = -1000000
limit_bottom = 500
limit_smoothed = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_speed = 1.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Hitbox_Pj" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_Pj"]
position = Vector2( -0.450001, 0.503419 )
scale = Vector2( 0.96299, 0.996579 )
shape = SubResource( 3 )

[node name="Hitbox_Guitar_Slash" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_Guitar_Slash"]
position = Vector2( 49.57, 4.53016 )
rotation = 4.71239
scale = Vector2( 1.66073, 2.9749 )
shape = SubResource( 4 )
disabled = true

[node name="Hitbox_Bounce" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_Bounce"]
position = Vector2( 0.4, 38 )
shape = SubResource( 5 )
disabled = true

[node name="Timer_Bounce_Reload" type="Timer" parent="."]
one_shot = true

[node name="Timer_Death" type="Timer" parent="."]

[node name="Timer_Invicibility" type="Timer" parent="."]

[node name="Timer_Begin_Attack" type="Timer" parent="."]

[node name="Timer_End_Attack" type="Timer" parent="."]

[node name="Timer_Blinking_Sprite" type="Timer" parent="."]

[node name="Timer_Bounce_Attack" type="Timer" parent="."]

[node name="Sounds" type="Node2D" parent="."]

[node name="Bounce" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 75 )

[node name="Jump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 76 )

[node name="Special" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 77 )

[node name="Special_Attack_Position1" type="Position2D" parent="."]
position = Vector2( 33, 5 )

[node name="Special_Attack_Position2" type="Position2D" parent="."]
position = Vector2( -32, 5 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Hitbox_Pj" to="." method="_on_Hitbox_Pj_area_entered"]
[connection signal="area_entered" from="Hitbox_Bounce" to="." method="_on_Hitbox_Bounce_area_entered"]
[connection signal="timeout" from="Timer_Bounce_Reload" to="." method="_on_Timer_Bounce_Reload_timeout"]
[connection signal="timeout" from="Timer_Death" to="." method="_on_Timer_Death_timeout"]
[connection signal="timeout" from="Timer_Invicibility" to="." method="_on_Timer_Invicibility_timeout"]
[connection signal="timeout" from="Timer_Begin_Attack" to="." method="_on_Timer_Begin_Attack_timeout"]
[connection signal="timeout" from="Timer_End_Attack" to="." method="_on_Timer_End_Attack_timeout"]
[connection signal="timeout" from="Timer_Blinking_Sprite" to="." method="_on_Timer_Blinking_Sprite_timeout"]
[connection signal="timeout" from="Timer_Bounce_Attack" to="." method="_on_Timer_Bounce_Attack_timeout"]
